@@ -426,7 +426,7 @@ void set_max_half_open_connections(int limit);
 </blockquote>
 <p>Sets the maximum number of half-open connections libtorrent will have when
 connecting to peers. A half-open connection is one where connect() has been
-called, but the connection still hasn't been established (nor filed). Windows
+called, but the connection still hasn't been established (nor failed). Windows
 XP Service Pack 2 sets a default, system wide, limit of the number of half-open
 connections to 10. So, this limit can be used to work nicer together with
 other network applications on that system. The default is to have no limit,
@@ -2458,7 +2458,7 @@ struct peer_error_alert: alert
 <div class="section" id="invalid-request-alert">
 <h2><a name="invalid-request-alert">invalid_request_alert</a></h2>
 <p>This is a debug alert that is generated by an incoming invalid piece request. The <tt class="docutils literal"><span class="pre">handle</span></tt>
-is a handle to the torrent the peer is a member of. <tt class="docutils literal"><span class="pre">Ïp</span></tt> is the address of the peer and the
+is a handle to the torrent the peer is a member of. <tt class="docutils literal"><span class="pre">ìp</span></tt> is the address of the peer and the
 <tt class="docutils literal"><span class="pre">request</span></tt> is the actual incoming request from the peer. The alert is generated as severity level
 <tt class="docutils literal"><span class="pre">debug</span></tt>.</p>
 <pre class="literal-block">
@@ -3045,13 +3045,13 @@ boost::filesystem::path::default_name_check(boost::filesystem::native);
 </div>
 <div class="section" id="acknowledgments">
 <h1><a name="acknowledgments">acknowledgments</a></h1>
-<p>Written by Arvid Norberg. Copyright © 2003-2005</p>
+<p>Written by Arvid Norberg. Copyright © 2003-2006</p>
 <p>Contributions by Magnus Jonsson, Daniel Wallin and Cory Nelson</p>
 <p>Lots of testing, suggestions and contributions by Massaroddel and Tianhao Qiu.</p>
 <p>Big thanks to Michael Wojciechowski and Peter Koeleman for making the autotools
 scripts.</p>
 <p>Thanks to Reimond Retz for bugfixes, suggestions and testing</p>
-<p>Thanks to <a class="reference" href="http://www.cs.umu.se">University of UmeÂ</a> for providing development and test hardware.</p>
+<p>Thanks to <a class="reference" href="http://www.cs.umu.se">University of Umeå</a> for providing development and test hardware.</p>
 <p>Project is hosted by sourceforge.</p>
 <p><a class="reference" href="http://sourceforge.net"><img alt="sf_logo" src="http://sourceforge.net/sflogo.php?group_id=7994" /></a></p>
 </div>
